<resources>
    <string name="app_name">Just Coffee</string>
    <string name="textcof">"Start your day With a perfect Coffee"</string>
    <string name="order">Order Now</string>
    <string name="quantity">Quantity</string>
    <string name="inc">+</string>
    <string name="dec">-</string>
    <string name="zero">0</string>
    <string name="details">Additional Details</string>
    <string name="type">Cafe Latte</string>
    <string name="desc">Enter Description</string>
    <string name="Rs">Price \u20B9</string>
    <string name="coftext">Caffè latte is a coffee-based drink made primarily from espresso and steamed milk. It consists of espresso, heated milk and foam.</string>
</resources>
