<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.coffee.justcoffee.CoffeeActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@drawable/coffecup"
        android:id="@+id/cofImg"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:layout_below="@id/cofImg"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:id="@+id/cafeText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:text="@string/Rs"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:padding="15dp"
        android:id="@+id/price_text_view"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/pricePick"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/cafeText">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="@string/dec"
            android:background="@color/colorGreen"
            android:textColor="@android:color/white"
            android:onClick="decrement"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:id="@+id/quantity_text_view"
            android:textSize="16sp"
            android:padding="10dp"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorGreen"
            android:textColor="@android:color/white"
            android:text="@string/inc"
            android:onClick="increment"/>


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_below="@id/pricePick"
        android:text="@string/coftext"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textColor="@android:color/white"
        android:onClick="submitOrder"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/btnorder"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>
